--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
     "zustand": "^4.5.4",
-    "expo-linear-gradient": "~13.0.2"
+    "expo-linear-gradient": "~13.0.2",
+    "expo-sensors": "~13.0.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
